--- a/bilibili-lite/src/manga/info.styl
+++ b/bilibili-lite/src/manga/info.styl
@@ -1,20 +1,35 @@
 /* 漫画页 */
+.purchase-panel-component .purchase-panel .action-buttons .tooltip
+  display none !important
+
 .episode-comment
+.theme-dark .manga-reader .more-btn-container
   background-color var(--c-background) !important
+
+.manga-reader .info-hud
+.manga-reader .info-layer .floating-button
+  background-color var(--c-bg-header) !important
 
 .read-nav .episode
 .episode-comment .header-section div
+.theme-dark .right-part .drop-list .size-ruler .data-list div
+.purchase-panel-component .purchase-panel .panel-title
   color var(--c-title) !important
+
+.manga-reader .read-nav a
+.manga-reader .read-nav span
+.manga-reader .manga-navbar-history-list .action-button
+.manga-reader .manga-navbar-favourite-manga .action-button
+.manga-reader .info-hud div
+.manga-reader .info-hud span
+  color var(--c-white) !important
 
 .action-bar-container .app-button
 .hover-toast .app-button
 .floating-button
 .episode-comment .header-section .close-button
   background-color transparent !important
+  color var(--c-title) !important
 
   &::after
     content none !important
-
-.info-layer .floating-button
-  border 1px solid var(--c-border) !important
-  background-color var(--c-hover) !important
