--- a/bilibili-lite/src/member/base.styl
+++ b/bilibili-lite/src/member/base.styl
@@ -73,6 +73,7 @@
 .article-danmu-wrp .danmu-box .danmu-table .danmu-item:nth-child(odd)
 .article-danmu-wrp .danmu-box .danmu-table .danmu-item:hover
 .article-danmu-wrp .danmu-box .danmu-table .danmu-item .item-act .option-wrp .act-btn
+.recent-danmu-wrp .danmu-table .danmu-item .item-act .option-wrp .act-btn
   background-color var(--c-hover) !important
 
 .dc-progress-bar
@@ -251,6 +252,7 @@ i.icon-shape:after
 .article-danmu-wrp .danmu-filter .left .danmu-type .plain
 .article-danmu-wrp .danmu-filter .left .protect .plain
 .article-danmu-wrp .danmu-filter .left .refresh .plain
+.recent-danmu-wrp .danmu-table .danmu-item .item-act .option-wrp .act-btn
   border-color var(--c-border) !important
 
 .cc-article-wrp .del-wrp .modal-wrap .geetest_holder.geetest_wind .geetest_radar_btn
