--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -4,6 +4,7 @@ span.big-vip-red
 em:not(.icon)
 .m-header .num
 .bili-header-m .num
+.nav-item .num
 .badge.pink
 .badge.is-vip
 .badge.type_0
@@ -176,6 +177,10 @@ textarea
 .history-dlg
 .bangumi-options .opt-list
 .ui-popup .popup-wrap
+.user-info-component .unuseable .user-help .unuseable-hinter
+.auto-purchase .page-sub-title .question-icon .hover-tab
+.question-icon .hover-tab
+.purchase-panel-component .purchase-panel
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
