--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -99,6 +99,7 @@ button
 .file-list-v2-container .file-add-btn
 .submit-button-group-v2-container .submit-btn-group-add
 .share-modal .copy-btn
+.coupon-label .container-right .to-use
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
