--- a/bilibili-lite/src/public/form.styl
+++ b/bilibili-lite/src/public/form.styl
@@ -7,6 +7,8 @@
 .s-item:hover
 .el-select-dropdown__item.hover
 .el-select-dropdown__item:hover
+.dropbox-component
+.dropbox-component .data-list>li:hover
   background-color var(--c-hover) !important
 
 .el-date-table td.disabled div
@@ -23,6 +25,7 @@
 .s-item.active
 .s-item:hover
 .player-auxiliary-danmaku-date-picker-container .player-auxiliary-danmaku-date-picker-body .player-auxiliary-danmaku-date-picker-week .day-span
+.dropbox-component .current
   color var(--c-title) !important
 
 .date-picker-v2-container i
@@ -34,6 +37,7 @@ select
 .date-panel .day.active
 .player-auxiliary-danmaku-date-picker-container .player-auxiliary-danmaku-date-picker-body .day-span.day-enable.active
 .player-auxiliary-danmaku-date-picker-container .player-auxiliary-danmaku-date-picker-body .day-span.day-enable:hover
+.dropbox-component .data-list>li:hover
   color var(--c-accent) !important
 
 .time-picker-v2-container .time-picker-head-wrp
@@ -44,6 +48,7 @@ select
 .player-auxiliary-danmaku-date-picker-container .player-auxiliary-danmaku-date-picker-header
 .head .dropdown-menu .article-list
 .num-content .ticket-count
+.dropbox-component
   border-color var(--c-border) !important
 
 .ui-radio.active .ui-radio-icon
@@ -75,6 +80,7 @@ select
 .bili-dropdown
 .bili-dropdown .dropdown-list
 .player-auxiliary-danmaku-date-picker-container
+.dropbox-component .data-list
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
 
