--- a/bilibili-lite/src/manga/index.styl
+++ b/bilibili-lite/src/manga/index.styl
@@ -2,9 +2,8 @@
 	/* 漫画样式 */
   @import 'header'
 	@import 'home'
+  @import 'detail'
   @import 'info'
   @import 'ranking'
-}
-@-moz-document url-prefix("https://manga.bilibili.com/detail/") {
-  @import 'detail'
+  @import 'account'
 }
