--- a/bilibili-lite/src/pay/base.styl
+++ b/bilibili-lite/src/pay/base.styl
@@ -35,6 +35,7 @@
   color var(--c-title) !important
 
 .el-table .el-table__row .cell
+.b-info .warning-group .warning-title
   color var(--c-text) !important
 
 .bp-user-box i
@@ -44,9 +45,12 @@
 .qrpay-group .qrpay-content .price p
 .spend-recode .title-group .selected-title
 .b-info .balance-footer .part-balance-name .part-balance-price
+.el-form-item.is-required .el-form-item__label:before
   color var(--c-accent) !important
 
 .b-info .warning-group
+.bind-info .dividing-line
+.bind-info .note-content .bank-form .avatar-uploader .el-upload
   border-color var(--c-border) !important
 
 .bp-user-box-bb
