--- a/bilibili-lite/src/show/base.styl
+++ b/bilibili-lite/src/show/base.styl
@@ -27,6 +27,7 @@
 .ticket-tips-wrapper .ticket-tips
 .confirmorder-container .discounts .discounts-list p
 .total-container
+.ticket-tips-wrapper .merchant-section
   background-color var(--c-hover) !important
 
 .nav-header-wrapper .nav-header
@@ -37,6 +38,7 @@
 .modal-wrapper .modal-container
 .activity-info
 .info-header
+.ticket-tips-wrapper .merchant-section .baseinfo-wrapper .content-item .title
   background-color transparent !important
 
 .selector-wrapper .more-city-letter-list .more-city-letter-item .letter-item.active:after
@@ -52,6 +54,7 @@
 .info-header span
 .announcement-title
 .info-content p strong
+.ticket-tips-wrapper .merchant-section .merchant-header
   color var(--c-title) !important
 
 .detail-info-wrapper .vuene-info-content div
@@ -59,6 +62,7 @@
 .selectable-option
 .announcement-item.active .announcement-item-time
 .order-list-wrapper .order-list .no-order .err-tips
+.ticket-tips-wrapper .merchant-section .baseinfo-wrapper .content-item .content
   color var(--c-text) !important
 
 .buyticket .product-buy div
