--- a/bilibili-lite/src/space/home.styl
+++ b/bilibili-lite/src/space/home.styl
@@ -75,6 +75,7 @@
 
 #pin-wrapper #pin-layer
 .modal-wrapper
+.fans-action-follow
   background-color var(--c-background)
 
 #pin-wrapper .pin-layer-vlist .small-item:hover
@@ -94,6 +95,7 @@ input[type=text]:focus
 #page-index .channel .channel-item
 .article-content
 .s-content
+.fans-action-btn.follow
   border-color var(--c-border)
 
 .be-tab-cursor
@@ -358,3 +360,14 @@ input[type=text]:focus
 
   &::after
     content none
+
+// 资料弹窗
+#id-card
+  border 1px solid var(--c-border)
+  background-color var(--c-background)
+
+  .vip-name-check
+    color var(--c-accent) !important
+
+  .idc-content .idc-sign
+    color var(--c-text) !important
