--- a/bilibili-lite/src/index.styl
+++ b/bilibili-lite/src/index.styl
@@ -13,22 +13,22 @@
 @advanced  dropdown  defaultTheme  "选择默认主题" {
 	auto "跟随系统" <<<EOT
   /*! auto *\/:root{--c-title:/*[[titleColor]]*\/;--c-text:/*[[textColor]]*\/;--c-border:/*[[borderColor]]*\/;--c-background:/*[[backgroundColor]]*\/;--c-hover:/*[[hoverColor]]*\/;--c-accent:/*[[accentColor]]*\/;--c-white:#fff;--c-bg-header:rgba(0, 0, 0, .3);--c-scroll:#7c7d7f}@media(prefers-color-scheme:dark){:root{--c-title:/*[[titleDarkColor]]*\/;--c-text:/*[[textDarkColor]]*\/;--c-border:/*[[borderDarkColor]]*\/;--c-background:/*[[backgroundDarkColor]]*\/;--c-hover:/*[[hoverDarkColor]]*\/}} EOT;
-	light "亮色" <<<EOT
+	light "浅色" <<<EOT
   /*! light *\/:root{--c-title:/*[[titleColor]]*\/;--c-text:/*[[textColor]]*\/;--c-border:/*[[borderColor]]*\/;--c-background:/*[[backgroundColor]]*\/;--c-hover:/*[[hoverColor]]*\/;--c-accent:/*[[accentColor]]*\/;--c-white:#fff;--c-bg-header:rgba(0, 0, 0, .3);--c-scroll:#7c7d7f} EOT;
-	dark "暗色" <<<EOT
+	dark "深色" <<<EOT
   /*! dark *\/:root{--c-title:/*[[titleDarkColor]]*\/;--c-text:/*[[textDarkColor]]*\/;--c-border:/*[[borderDarkColor]]*\/;--c-background:/*[[backgroundDarkColor]]*\/;--c-hover:/*[[hoverDarkColor]]*\/;--c-accent:/*[[accentColor]]*\/;--c-white:#fff;--c-bg-header:rgba(0, 0, 0, .3);--c-scroll:#7c7d7f} EOT;
 }
 @advanced  color  accentColor  "主色调"  #00a1d6
-@advanced  color  titleColor  "亮-主要文本"  #212121
-@advanced  color  textColor  "亮-次要文本"  #666
-@advanced  color  borderColor  "亮-边框"  #ccc
-@advanced  color  backgroundColor  "亮-背景"  #fff
-@advanced  color  hoverColor  "亮-次要背景"  rgba(230,230,230,.3)
-@advanced  color  titleDarkColor  "暗-主要文本"  #e2e2e2
-@advanced  color  textDarkColor  "暗-次要文本"  #bababa
-@advanced  color  borderDarkColor  "暗-边框"  #4e4e4e
-@advanced  color  backgroundDarkColor  "暗-背景"  #25272a
-@advanced  color  hoverDarkColor  "暗-次要背景"  rgba(20,20,20,.3)
+@advanced  color  titleColor  "浅-主要文本"  #212121
+@advanced  color  textColor  "浅-次要文本"  #666
+@advanced  color  borderColor  "浅-边框"  #ccc
+@advanced  color  backgroundColor  "浅-背景"  #fff
+@advanced  color  hoverColor  "浅-次要背景"  rgba(230,230,230,.3)
+@advanced  color  titleDarkColor  "深-主要文本"  #e2e2e2
+@advanced  color  textDarkColor  "深-次要文本"  #bababa
+@advanced  color  borderDarkColor  "深-边框"  #4e4e4e
+@advanced  color  backgroundDarkColor  "深-背景"  #25272a
+@advanced  color  hoverDarkColor  "深-次要背景"  rgba(20,20,20,.3)
 ==/UserStyle== */
 @import 'public'
 @import 'home'
