--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -100,6 +100,7 @@ button
 .submit-button-group-v2-container .submit-btn-group-add
 .share-modal .copy-btn
 .coupon-label .container-right .to-use
+.bind-info .note-footer .btn-group .common-btn.active-btn
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
@@ -154,6 +155,8 @@ button
 .main-container .media-info .media-right .media-tool-bar .btn-follow.active
 .bangumi-pagelistbox .p
 .be-pager .be-pager-item
+.be-pager .be-pager-prev
+.be-pager .be-pager-next
 .more-btn-cntr
 .main-container .ep-list-wrapper .list-wrapper.simple ul .ep-item
 #pgc-navigate-wrap .ep-box .ep-sub .ep-item
@@ -212,6 +215,7 @@ button
 .coupon-btn-disable
 .bl-button--primary:disabled
 .game-list-all
+.bind-info .note-footer .btn-group .common-btn
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-title) !important
